refactored bodyPadding to bodyWrapper added Footer element fixed .spacing

--- a/style.css
+++ b/style.css
@@ -6,9 +6,16 @@ body {
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
 }
-.bodyPadding {
-	padding: 0 1rem;
+.bodyWrapper {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+
+	/* padding: 0 1rem; */
 }
 
 /* ****************************************************************** */
@@ -18,25 +25,30 @@ body {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	padding: 6px;
 }
 
 .myNavGroup {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	gap: 0.8rem;
+	/* gap: 0.8rem; */
 	color: #fff;
 	font-size: 13px;
 }
 
 .myNavGroup > div {
-	padding: 0.8rem 0.25rem;
+	padding: 5px 10px;
 }
 
 /* First of myNavGroup has a greyish colour, while the 2nd one is white */
 .myNavGroup:first-of-type {
 	color: #bdc1c6;
 	font-size: 14px;
+}
+
+.navLink:first-of-type {
+	margin-left: 16px;
 }
 
 /* Gmail and Images navlinks */
@@ -122,7 +134,7 @@ body {
 	min-height: 92px;
 	height: calc(100% - 560px);
 	max-height: 290px;
-	width: auto;
+	/* width: auto; */
 }
 
 .googlePic {
@@ -133,7 +145,6 @@ body {
 	width: auto;
 	/* custom height, taken from Inspect Element in Google homepage */
 	height: 92px;
-	margin-top: 2rem;
 	aspect-ratio: auto 272/92;
 }
 
@@ -156,9 +167,9 @@ body {
 	width: 638px;
 	/* width: auto; */
 	max-width: 584px;
-	border-radius: 24px;
+	border-radius: 999px;
 	align-items: center;
-	padding: 0 0.8rem;
+	padding: 0.2rem 0.8rem;
 }
 
 .search:hover {
@@ -211,4 +222,76 @@ body {
 .searchButtons > button:hover {
 	cursor: pointer;
 	border: 1px solid #5f6368;
+}
+
+/* **************************************************************** */
+/* SPACING */
+.spacing {
+	display: flex;
+	flex-grow: 1;
+	flex-direction: column;
+	/* min-height: 10px; */
+}
+
+/* **************************************************************** */
+/* FOOTER */
+
+.myFooter {
+	display: flex;
+	background-color: #171717;
+	color: #9aa0a6;
+	flex-direction: column;
+}
+
+.location {
+	display: flex;
+	flex-direction: row;
+	flex-grow: 1;
+	padding: 0.9375rem 1.875rem;
+	border-bottom: 1px solid #3c4043;
+	font-size: 15px;
+}
+
+.botNavBar {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 1.4rem;
+	font-size: 14px;
+	flex-wrap: wrap;
+}
+
+.botNavBarLeft {
+	display: flex;
+	justify-content: start;
+	flex-direction: row;
+	min-width: 30%;
+	order: 1;
+}
+.botNavBarMiddle {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	order: 2;
+}
+.botNavBarRight {
+	display: flex;
+	justify-content: flex-end;
+	flex-direction: row;
+	min-width: 30%;
+	order: 3;
+}
+
+.footerNavLink {
+	text-decoration: none;
+	color: #9aa0a6;
+	padding: 1rem 0.5rem;
+}
+
+.footerNavLink:hover {
+	text-decoration: underline;
+}
+
+.footerNavLink > img {
+	height: 0.875rem;
+	margin-right: 0.375rem;
 }
